--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Altering Works</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="viewport.js" defer></script>
 </head>
 <body>
     <div class="video-background">
