--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
     </div>
     
     <div class="content">
-        <p class="fade-in">coming soon</p>
+        <div class="text-container">
+            <p class="fade-in main-text">coming soon</p>
+            <p class="fade-in social-links">
+                <span>instagram</span>
+                <span>twitter</span>
+            </p>
+        </div>
     </div>
 </body>
 </html>
