--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="video-background">
-        <video autoplay muted loop id="bg-video">
+        <video autoplay muted loop playsinline id="bg-video">
             <source src="altering-works-video-90K.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
