--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         <div class="text-container">
             <p class="fade-in main-text">coming soon</p>
             <p class="fade-in social-links">
-                <span>instagram</span>
-                <span>twitter</span>
+                <a href="https://www.instagram.com/altering.works" target="_blank" rel="noopener noreferrer">instagram</a>
+                <span> | </span>
+                <a href="https://x.com/alteringworks" target="_blank" rel="noopener noreferrer">twitter</a>
             </p>
         </div>
     </div>
