minor update, adapting to showcase more things

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
                 <a href="https://www.instagram.com/altering.works" target="_blank" rel="noopener noreferrer">instagram</a>
                 <span> | </span>
                 <a href="https://x.com/alteringworks" target="_blank" rel="noopener noreferrer">twitter</a>
+                <span> | </span>
+                <a href="cv" target="_blank" rel="noopener noreferrer">cv</a>
+                <span> | </span>
+                <a href="youtube_reel_late_q4" target="_blank" rel="noopener noreferrer">reel</a>
+            </p>
+            <p class="fade-in main-text alt-font">
+                in the mean time, check 
+                <a href="https://www.instagram.com/phileezor" target="_blank" rel="noopener noreferrer">@phileezor</a> everywhere
             </p>
         </div>
     </div>
