--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
                 <span> | </span>
                 <a href="youtube_reel_late_q4" target="_blank" rel="noopener noreferrer">reel</a>
             </p>
-            <p class="fade-in main-text alt-font">
-                in the mean time, check 
-                <a href="https://www.instagram.com/phileezor" target="_blank" rel="noopener noreferrer">@phileezor</a> everywhere
+            <p class="fade-in main-text alt-font social-links">
+                in the meantime, check out 
+                <a href="https://www.instagram.com/phileezor" target="_blank" rel="noopener noreferrer">@phileezor</a> everywhere.
             </p>
+            
         </div>
     </div>
 </body>
