--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <span> | </span>
                 <a href="https://x.com/alteringworks" target="_blank" rel="noopener noreferrer">twitter</a>
                 <span> | </span>
-                <a href="cv" target="_blank" rel="noopener noreferrer">cv</a>
+                <a href="/cv_viewer.html" target="_blank" rel="noopener noreferrer">cv</a>
                 <span> | </span>
                 <a href="youtube_reel_late_q4" target="_blank" rel="noopener noreferrer">reel</a>
             </p>
