--- a/cv_viewer.html
+++ b/cv_viewer.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="EI=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AW - Philip's CV</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        #viewPDF{
+            width: 85%;
+            height: 975px;
+        }
+    </style>
 </head>
 <body>
-    <iframe src="docs/CV 2025 DP & VFX - Philip.pdf" frameborder="0"></iframe>
+    <iframe id= "viewPDF" src="docs/CV 2025 DP & VFX - Philip.pdf" frameborder="0"></iframe>
 </body>
 </html>
