--- a/cv_viewer.html
+++ b/cv_viewer.html
@@ -2,17 +2,60 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="EI=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AW - Philip's CV</title>
     <style>
-        #viewPDF{
-            width: 85%;
-            height: 975px;
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f4f4f4;
+        }
+
+        .pdf-container {
+            width: 90%;
+            max-width: 1200px;
+            height: 90%;
+            border: 1px solid #ccc;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            background-color: #fff;
+        }
+
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+
+        .fallback-text {
+            display: none;
+            padding: 1em;
+            text-align: center;
+            font-size: 1.2em;
+            color: #333;
+        }
+
+        iframe[onerror] + .fallback-text {
+            display: block;
         }
     </style>
 </head>
 <body>
-    <iframe id= "viewPDF" src="docs/CV 2025 DP & VFX - Philip.pdf" frameborder="0"></iframe>
+    <div class="pdf-container">
+        <iframe 
+            id="viewPDF" 
+            src="docs/CV_2025_DP_VFX_Philip.pdf" 
+            title="Philip's CV PDF"
+            onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+        </iframe>
+        <div class="fallback-text">
+            Unable to load the PDF. Please <a href="docs/CV_2025_DP_VFX_Philip.pdf" download>click here</a> to download the file.
+        </div>
+    </div>
 </body>
 </html>
