--- a/cv_viewer.html
+++ b/cv_viewer.html
@@ -49,12 +49,12 @@
     <div class="pdf-container">
         <iframe 
             id="viewPDF" 
-            src="docs/CV_2025_DP_VFX_Philip.pdf" 
+            src="docs/CV 2025 DP & VFX - Philip.pdf" 
             title="Philip's CV PDF"
             onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
         </iframe>
         <div class="fallback-text">
-            Unable to load the PDF. Please <a href="docs/CV_2025_DP_VFX_Philip.pdf" download>click here</a> to download the file.
+            Unable to load the PDF. Please <a href="docs/CV 2025 DP & VFX - Philip.pdf" download>click here</a> to download the file.
         </div>
     </div>
 </body>
