--- a/cv_viewer.html
+++ b/cv_viewer.html
@@ -14,7 +14,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #f4f4f4;
+            background-color: black;
         }
 
         .pdf-container {
@@ -23,7 +23,7 @@
             height: 90%;
             border: 1px solid #ccc;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            background-color: #fff;
+            background-color:black;
         }
 
         iframe {
@@ -54,7 +54,7 @@
             onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
         </iframe>
         <div class="fallback-text">
-            Unable to load the PDF. Please <a href="docs/CV 2025 DP & VFX - Philip.pdf" download>click here</a> to download the file.
+            Please <a href="docs/CV 2025 DP & VFX - Philip.pdf" download>click here</a> to download the file.
         </div>
     </div>
 </body>
