--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <span> | </span>
                 <a href="/cv_viewer.html" target="_blank" rel="noopener noreferrer">cv</a>
                 <span> | </span>
-                <a href="youtube_reel_late_q4" target="_blank" rel="noopener noreferrer">reel</a>
+                <a href="https://youtu.be/OJrqSdUsNh0" target="_blank" rel="noopener noreferrer">reel</a>
             </p>
             <br><br><br>
             <p class="fade-in main-text alt-font social-links">
